--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@apollo/react-hooks": "^4.0.0",
     "@apollo/react-ssr": "^4.0.0",
     "@auth0/nextjs-auth0": "1.6.1",
+    "@google/model-viewer": "^2.1.1",
     "bootstrap": "3.4.1",
     "dotenv": "10.0.0",
     "graphql": "^16.6.0",
@@ -19,6 +20,8 @@
     "nookies": "2.5.2",
     "prop-types": "15.7.2",
     "react": "17.0.2",
+    "react-3d-viewer": "^1.0.12",
+    "react-3dmodelx": "^1.0.4",
     "react-bootstrap": "1.0.1",
     "react-dom": "17.0.2",
     "subscriptions-transport-ws": "^0.11.0"
